--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/drei": "^9.56.24",
+    "@react-three/fiber": "^8.11.0",
+    "@types/three": "^0.149.0",
+    "daisyui": "^2.50.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "theme-change": "^2.3.0",
+    "three": "^0.149.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
