--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@types/three": "^0.149.0",
+    "@vercel/analytics": "^0.1.11",
     "daisyui": "^2.50.1",
     "next": "13.1.6",
     "react": "18.2.0",
