--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@types/three": "^0.149.0",
     "@vercel/analytics": "^0.1.11",
     "daisyui": "^2.50.1",
+    "graphql": "^16.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
