--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
