--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
+    "@graphcms/rich-text-types": "^0.5.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@types/three": "^0.149.0",
