--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
-    "@graphcms/rich-text-react-renderer": "^0.6.1",
-    "@graphcms/rich-text-types": "^0.5.0",
+    "@next/mdx": "^13.2.4",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
     "@types/three": "^0.149.0",
@@ -19,6 +18,7 @@
     "daisyui": "^2.50.1",
     "graphql": "^16.6.0",
     "next": "13.1.6",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
