--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.149.0",
     "@vercel/analytics": "^0.1.11",
     "daisyui": "^2.50.1",
+    "framer-motion": "^10.2.4",
     "graphql": "^16.6.0",
     "next": "13.1.6",
     "next-mdx-remote": "^4.4.1",
