--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^2.50.1",
     "framer-motion": "^10.2.4",
     "graphql": "^16.6.0",
+    "lamina": "^1.1.23",
     "next": "13.1.6",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
