--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.11.0",
     "@types/three": "^0.149.0",
     "@vercel/analytics": "^0.1.11",
+    "clsx": "^1.2.1",
     "daisyui": "^2.50.1",
     "graphql": "^16.6.0",
     "lamina": "^1.1.23",
